fixed overflow empty space bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,8 @@
 
 .App {
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+  overflow-x: hidden;
 }
 
 #flowers {
