--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 html {
   background-color:snow;
   position: relative;
-  overflow-x: hidden;
 }
 
 body {
